# uipilot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  vulture_whitelist.py
.github/workflows/: publish-to-pypi.yml
docs/: AGENT_GUIDE.md  PACK_AUTHORING.md  PUBLISHING.md  USE_CASES.md
docs/engineering/: python-quality-check.md
examples/demo/: .env.example  capabilities.py  flowmap.config.yaml
examples/demo/data/: console.app.yaml  flows.yaml  portal.app.yaml
src/uipilot/: __init__.py
src/uipilot/application/: __init__.py  service.py
src/uipilot/domain/: __init__.py  compiler.py  errors.py  flows.py  graph.py  model.py  templating.py  usage.py  validation.py  verification.py
src/uipilot/infrastructure/: __init__.py  capabilities.py  env_file.py  markdown_importer.py  pack_loader.py  scaffold.py
src/uipilot/presentation/: __init__.py  cli.py  renderers.py
src/uipilot/templates/: capabilities.py  flowmap.config.yaml  skill.md
src/uipilot/templates/data/: app.app.yaml  flows.yaml
tests/: conftest.py  test_application_service.py  test_cli_e2e.py  test_domain_units.py  test_emit_and_cli.py  test_infrastructure.py  test_renderers.py  test_scaffold.py  test_script.py  test_store.py  test_validate.py  test_validation_warnings.py
tests/e2e/: conftest.py  test_cli_commands.py  test_cli_e2e.py  test_cli_init.py
tests/integration/: conftest.py  test_application_service.py  test_importer_and_capability.py  test_infrastructure.py  test_scaffold.py  test_script.py  test_store.py  test_validate.py  test_validation_warnings.py
tests/unit/: conftest.py  test_emit.py  test_graph.py
