[project]
name = "uipilot"
version = "0.4.0"
description = "App-agnostic engine that models a web UI as a graph and compiles flows into Playwright-MCP-executable scripts for agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sergei Konovalov" }]
keywords = ["playwright", "mcp", "ui-testing", "automation", "agents", "web-ui"]
dependencies = [
    "typer>=0.26.8",
    "rich>=15.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
uipilot = "uipilot.presentation.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6",
    "ruff>=0.15.20",
    "ty>=0.0.57",
    "vulture>=2.16",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "uipilot"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=uipilot --cov-branch --cov-report=term-missing --cov-fail-under=90"
markers = [
    "unit: pure logic, no I/O",
    "integration: touches real external resources (filesystem, pack loading)",
    "e2e: exercises the whole app end-to-end through the CLI",
]

[tool.coverage.run]
source = ["uipilot"]
branch = true
parallel = true  # each xdist worker / CLI subprocess writes its own .coverage.*
# Templates are inert scaffolding shipped as package data, not code under test.
omit = ["*/uipilot/templates/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# --- Static analysis -------------------------------------------------------

[tool.ruff]
line-length = 100
# target-version omitted — Ruff infers it from requires-python so the two can't drift.
src = ["src", "tests"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B), pyupgrade (UP),
# comprehensions (C4), bandit-security (S), simplify (SIM), return (RET),
# use-pathlib (PTH), Ruff-native (RUF).
select = ["E", "W", "F", "I", "B", "UP", "C4", "S", "SIM", "RET", "PTH", "RUF"]
ignore = [
    "E501",   # line length — long strings/tables are readable as-is
    "UP045",  # Optional[X] over X | None — deliberate style with __future__ annotations
    "UP007",  # Optional[X] / Union — same deliberate style
    "B008",   # function-call-in-default — this IS the Typer Option() idiom
]

[tool.ruff.lint.per-file-ignores]
# Tests: `assert` is the point (S101); fixture credentials and /tmp paths are
# inert test data, not real secrets (S105/S106/S108).
"tests/**" = ["B011", "B905", "S101", "S105", "S106", "S108"]
# vulture_whitelist.py is generated bare attribute refs simulating usage — B018
# ("useless expression") is exactly its shape by design.
"vulture_whitelist.py" = ["B018"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
unresolved-import = "error"  # missing dep / wrong venv should fail loudly

[tool.vulture]
paths = ["src", "vulture_whitelist.py"]
min_confidence = 80
sort_by_size = true
